new portfolio code

--- a/1index.html
+++ b/1index.html
@@ -20,9 +20,7 @@
         <!-- navbar section starts  -->
 
         <nav class="navbar">
-            <a href="#home">
-                 <!-- <img style="width: 30px; height: 30px;"  src="./images/logohome.png" /> -->
-                  <span></span> </a>
+            <a href="#home"> <img style="width: 30px; height: 30px;"  src="./images/logohome.png" /> <span></span> </a>
             <a href="#about">
                 <i class="fas fa-user"></i> <span>About</span>
             </a>
@@ -40,9 +38,10 @@
         <!-- Top Navigation Menu -->
         <div class="topnav">
             
-                <!-- <a href="#home"><img src="/images/logohome.png" alt="" /></a> -->
+                <a href="#home"><img src="/images/logohome.png" alt="" /></a
+            ></a>
             <div id="myLinks">
-                <a onclick="myFunction()" href="#home" style='color:white'> Home </a>
+                <a onclick="myFunction()" href="#home">Home</a>
                 <a onclick="myFunction()" href="#about">About</a>
                 <a onclick="myFunction()" href="#skills">Skills</a>
                 <a onclick="myFunction()" href="#project">Project</a>
