--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a onclick="myFunction()" href="#project">Project</a>
                 <a onclick="myFunction()" href="#contact">Contact</a>
             </div>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <a href="javascript:void(0);"  style='color: white !important' class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
             </a>
         </div>
