new portfolio code

--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
         <!-- Top Navigation Menu -->
         <div class="topnav">
             
-                <!-- <a href="#home"><img src="/images/logohome.png" alt="" /></a> -->
-            <div id="myLinks">
-                <a onclick="myFunction()" href="#home" style='color:white'> Home </a>
-                <a onclick="myFunction()" href="#about">About</a>
-                <a onclick="myFunction()" href="#skills">Skills</a>
-                <a onclick="myFunction()" href="#project">Project</a>
-                <a onclick="myFunction()" href="#contact">Contact</a>
-            </div>
-            <a href="javascript:void(0);"  style='color: white !important' class="icon" onclick="myFunction()">
-                <i class="fa fa-bars"></i>
-            </a>
+            <a href="#home"><img src="/images/logohome.png" alt="" /></a>
+        <div id="myLinks">
+            <a onclick="myFunction()" href="#home" style='color:white'> Home </a>
+            <a onclick="myFunction()" href="#about">About</a>
+            <a onclick="myFunction()" href="#skills">Skills</a>
+            <a onclick="myFunction()" href="#project">Project</a>
+            <a onclick="myFunction()" href="#contact">Contact</a>
         </div>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
+    </div>
 
         <!-- navbar section ends -->
 
