new portfolio code

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
         <!-- Top Navigation Menu -->
         <div class="topnav">
             
-            <a href="#home"><img src="/images/logohome.png" alt="" /></a>
+            <a href="#home">
+                <!-- <img src="/images/logohome.png" alt="" /> -->
+            </a>
         <div id="myLinks">
             <a onclick="myFunction()" href="#home" style='color:white'> Home </a>
             <a onclick="myFunction()" href="#about">About</a>
